# price_tracker

./: .env.example  .gitignore  README.md  items_config.json  pyproject.toml  requirements.txt
src/: config.py  database.py  fetcher.py  main.py  notifiers.py  tracker.py
tests/: test_config.py  test_fetcher_parsing.py
